hello.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    chromeriver.com/cluster: c4
    chromeriver.com/env: dev
    chromeriver.com/region: us-east-1
    deployment.kubernetes.io/revision: "1"
  labels:
    app: hello
  name: hello
  namespace: test-branch
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        chromeriver.com/cluster: c4
        chromeriver.com/env: dev
        chromeriver.com/region: us-east-1
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: chromeriver/hello:test-branch
        imagePullPolicy: Always
        name: hello
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: cr-private-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
