hell-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    chromeriver.com/cluster: c4
    chromeriver.com/env: dev
    chromeriver.com/region: us-east-1
  labels:
    app: hello
  name: hello
  namespace: test-branch
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
  sessionAffinity: None
  type: NodePort
